--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 MONGODB_URL=mongodb://mongodb:27017/db_up_task
+
+# JWT Config - https://github.com/auth0/node-jsonwebtoken
+TOKEN_SECRET_KEY=V8Z00Q4O067n6vS4
+TOKEN_EXPIRES=1h
