--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 MONGODB_URL=mongodb://mongodb:27017/db_up_task
 
+CLIENT_URL=http://localhost:5173
+
 # JWT Config - https://github.com/auth0/node-jsonwebtoken
 TOKEN_SECRET_KEY=V8Z00Q4O067n6vS4
 TOKEN_EXPIRES=1h
+
+EMAIL_USER=
+EMAIL_PASSWORD=
